--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "rpg-dice",
   "main": "./lib/rpg-dice",
   "version": "0.0.0",
-  "description": "A short description of your package",
+  "description": "Generate inline dice rolls for an RPG like DnD",
   "keywords": [
   ],
   "activationCommands": {
     "atom-workspace": "rpg-dice:roll"
   },
-  "repository": "https://github.com/atom/rpg-dice",
+  "repository": "https://github.com/akstuhl/rpg-dice",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
