--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "RPG",
     "dice",
     "game",
-    "dungeons-and-dragons"
+    "dungeons-and-dragons",
+    "tabletop",
+    "ttrpg",
+    "fate",
+    "fudge"
   ],
   "activationCommands": {
     "atom-workspace": "rpg-dice:roll"
